--- a/testimonials.html
+++ b/testimonials.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 
 
     <style>
@@ -121,30 +122,35 @@
             /* Prevent margin collapse */
         }
 
-            .img-responsivex {
-              height: auto;
-              width: auto;
-              max-height: 77px;
-              max-width: 255px;
-            }
-          </style>
-        </head>
+        .img-responsivex {
+            height: auto;
+            width: auto;
+            max-height: 77px;
+            max-width: 255px;
+        }
 
-        <body>
-          <!--================Header Menu Area =================-->
-          <header class="header_area navCustom">
-            <div class="main_menu">
-              <nav class="navbar navbar-expand-lg navbar-light">
+        .captchaWrap {
+            padding-top: 2em;
+        }
+    </style>
+</head>
+
+<body>
+    <!--================Header Menu Area =================-->
+    <header class="header_area navCustom">
+        <div class="main_menu">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container box_1620">
-                  <!-- Brand and toggle get grouped for better mobile display -->
-                  <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt="logo"
-                      class="img-responsivex"></a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt="logo"
+                            class="img-responsivex"></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav mr-auto">
@@ -162,7 +168,8 @@
                                 </ul>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="calendar.html">Calendar</a></li>
-                            <li class="nav-item active"><a class="nav-link" href="testimonials.html">Testimonials</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="testimonials.html">Testimonials</a>
+                            </li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right navbar-social">
@@ -227,53 +234,53 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p class="cursive">
-                            We had such a lovely time visiting the lodge. We had several families stay and everyone
-                            raved about how fun it was to all stay together in one space. The fire pit and deck space
-                            gave us lots of room to spread out. The kitchen was well-stocked, and there were plenty of
-                            towels and extra sheets. It was great to have two refrigerators and so many coolers outside.
-                            The row of outlets in the kitchen for crock pots and phone chargers is a brilliant touch and
-                            indicative of the thought that went into designing the cabin space. Parking was plentiful.
-                            At night, the outdoor space is really magical with twinkling lights in the trees and a huge
-                            fire pit that sat a dozen people. We will definitely stay again, and perhaps next time get a
-                            chance to explore the creek some more. Thank you Powers family!
+                        We had such a lovely time visiting the lodge. We had several families stay and everyone
+                        raved about how fun it was to all stay together in one space. The fire pit and deck space
+                        gave us lots of room to spread out. The kitchen was well-stocked, and there were plenty of
+                        towels and extra sheets. It was great to have two refrigerators and so many coolers outside.
+                        The row of outlets in the kitchen for crock pots and phone chargers is a brilliant touch and
+                        indicative of the thought that went into designing the cabin space. Parking was plentiful.
+                        At night, the outdoor space is really magical with twinkling lights in the trees and a huge
+                        fire pit that sat a dozen people. We will definitely stay again, and perhaps next time get a
+                        chance to explore the creek some more. Thank you Powers family!
                     </p>
                     <p class="cursive name">Stephanie A.</p>
                 </div>
             </div>
             <hr>
             <div class="row">
-                    <div class="col-lg-12">
-                        <p class="cursive">
-                                We had a bachelor party weekend with 13 guys. The property could not have been more perfect.
-                                More than enough room for a group of that size. The property had a large well stocked kitchen,
-                                plenty of towels and bed linens, 3 large TVs, and the cabin (indoors and outdoors) was wired
-                                with speakers. The outdoor area had a large deck (perfect for playing cornhole) and a large
-                                firepit. Another excellent feature was a large parking lot. We had no issues getting Uber and
-                                Lift rides down to State College. Michael and Justine the owners were great hosts, very easy
-                                to get ahold of for questions and very accommodating. Our group will certainly be making a
-                                return visit to the property.
-                        </p>
-                        <p class="cursive name">Chris P.</p>
-                    </div>
+                <div class="col-lg-12">
+                    <p class="cursive">
+                        We had a bachelor party weekend with 13 guys. The property could not have been more perfect.
+                        More than enough room for a group of that size. The property had a large well stocked kitchen,
+                        plenty of towels and bed linens, 3 large TVs, and the cabin (indoors and outdoors) was wired
+                        with speakers. The outdoor area had a large deck (perfect for playing cornhole) and a large
+                        firepit. Another excellent feature was a large parking lot. We had no issues getting Uber and
+                        Lift rides down to State College. Michael and Justine the owners were great hosts, very easy
+                        to get ahold of for questions and very accommodating. Our group will certainly be making a
+                        return visit to the property.
+                    </p>
+                    <p class="cursive name">Chris P.</p>
                 </div>
-                <hr>
-                <div class="row">
-                        <div class="col-lg-12">
-                            <p class="cursive">
-                                    What a find! The house was setup to have a perfect bachelor party weekend for my little
-                                    brother (a Penn State alumni). We had 12 guys there and everyone was super comfortable.
-                                    The kitchen was filled with all the pots and pans I needed to cook for the gang and it
-                                    even had a crock pot (or three!) that I could make a chili in! And the setup of the house
-                                    was ideal for the group. With large TVs in every room we were able to watch sports and movies
-                                    throughout the weekend. The real gem is the outdoor area. We had great weather one of the
-                                    nights so we were able to make a great fire in the truly enormous fire pit. We were out
-                                    there until very late without disturbing anyone, so the location is great! I'd recommend
-                                    this house to anyone, in fact we are looking at our calendars right now to maybe book another
-                                    weekend there (this time during football season!).
-                            </p>
-                            <p class="cursive name">Glenn C.</p>
-                        </div>
-                    </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="cursive">
+                        What a find! The house was setup to have a perfect bachelor party weekend for my little
+                        brother (a Penn State alumni). We had 12 guys there and everyone was super comfortable.
+                        The kitchen was filled with all the pots and pans I needed to cook for the gang and it
+                        even had a crock pot (or three!) that I could make a chili in! And the setup of the house
+                        was ideal for the group. With large TVs in every room we were able to watch sports and movies
+                        throughout the weekend. The real gem is the outdoor area. We had great weather one of the
+                        nights so we were able to make a great fire in the truly enormous fire pit. We were out
+                        there until very late without disturbing anyone, so the location is great! I'd recommend
+                        this house to anyone, in fact we are looking at our calendars right now to maybe book another
+                        weekend there (this time during football season!).
+                    </p>
+                    <p class="cursive name">Glenn C.</p>
+                </div>
+            </div>
         </div>
 
     </main>
@@ -291,30 +298,38 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-4  col-md-6 col-sm-6 center">
-                  <div class="single-footer-widget">
-                    <h6 class="pad-right1">Newsletter</h6>
-                    <p class="pad-right1">Stay up to date with our latest news</p>
-                    <div class="" id="mc_embed_signup">
+                <div class="col-lg-4 col-md-6 col-sm-6 center">
+                    <div class="single-footer-widget">
+                        <h6 class="pad-right1">Newsletter</h6>
+                        <p class="pad-right1">Stay up to date with our latest news</p>
+                        <div class="" id="mc_embed_signup">
 
-                      <form target="_blank" action="insert.php" method="post" class="form-inline">
+                            <form target="_blank" action="captcha2.php" method="post" class="form-inline">
 
-                        <div class="d-flex flex-row">
+                                <div class="d-flex flex-row">
 
-                          <input class="form-control" name="email" placeholder="Enter Email" onfocus="this.placeholder = ''"
-                            onblur="this.placeholder = 'Enter Email '" required="" type="email">
+                                    <input class="form-control" name="email" placeholder="Enter Email"
+                                        onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
+                                        required="" type="email">
+                                    <!-- <div class="captchaWrap">
+                    <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu"></div>
+                  </div> -->
+                                    <button id="button1" type="submit" value="Submit"
+                                        class="click-btn btn btn-default"><span
+                                            class="lnr lnr-arrow-right"></span></button>
+                                    <!--<div style="position: absolute; left: -5000px;">
+                    <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                  </div>-->
 
-
-                          <button class="click-btn btn btn-default"><span class="lnr lnr-arrow-right"></span></button>
-                          <!--<div style="position: absolute; left: -5000px;">
-                            <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-                          </div>-->
-
+                                </div>
+                                <div class="captchaWrap">
+                                    <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu"
+                                        data-callback="enableBtn"></div>
+                                </div>
+                                <div class="info"></div>
+                            </form>
                         </div>
-                        <div class="info"></div>
-                      </form>
                     </div>
-                  </div>
                 </div>
 
                 <div class="col-lg-3  col-md-6 col-sm-6 right">
@@ -346,7 +361,17 @@
     <script src="vendors/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+    <script>
+        $(window).on('load', function () {
+            document.getElementById("button1").disabled = true;
+        });
+    </script>
 
+    <script>
+        function enableBtn() {
+            document.getElementById("button1").disabled = false;
+        }
+    </script>
 </body>
 
 </html>
