--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 
   <style>
     html,
@@ -139,6 +139,9 @@
       width: auto;
       max-height: 77px;
       max-width: 255px;
+    }
+    .captchaWrap {
+      padding-top: 2em;
     }
   </style>
 </head>
@@ -639,32 +642,38 @@
             </p>
           </div>
         </div>
-        <div class="col-lg-4  col-md-6 col-sm-6 center">
+        <div class="col-lg-4 col-md-6 col-sm-6 center">
           <div class="single-footer-widget">
             <h6 class="pad-right1">Newsletter</h6>
             <p class="pad-right1">Stay up to date with our latest news</p>
             <div class="" id="mc_embed_signup">
 
-              <form target="_blank" action="insert.php" method="post" class="form-inline">
+              <form target="_blank" action="captcha2.php" method="post" class="form-inline">
 
                 <div class="d-flex flex-row">
 
                   <input class="form-control" name="email" placeholder="Enter Email" onfocus="this.placeholder = ''"
                     onblur="this.placeholder = 'Enter Email '" required="" type="email">
-
-
-                  <button class="click-btn btn btn-default"><span class="lnr lnr-arrow-right"></span></button>
+                  <!-- <div class="captchaWrap">
+                    <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu"></div>
+                  </div> -->
+                  <button id="button1" type="submit" value="Submit" class="click-btn btn btn-default"><span
+                      class="lnr lnr-arrow-right"></span></button>
                   <!--<div style="position: absolute; left: -5000px;">
                     <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
                   </div>-->
 
+                </div>
+                <div class="captchaWrap">
+                  <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu"
+                    data-callback="enableBtn"></div>
                 </div>
                 <div class="info"></div>
               </form>
             </div>
           </div>
         </div>
-        
+
         <div class="col-lg-3  col-md-6 col-sm-6 right">
           <div class="single-footer-widget">
             <h6>Follow Us</h6>
@@ -696,6 +705,17 @@
   <script src="js/main.js"></script>
   <script src="js/lightbox2/dist/js/lightbox.min.js"></script>
 
+  <script>
+    $(window).on('load', function () {
+      document.getElementById("button1").disabled = true;
+    });
+    </script>
+  
+    <script>
+      function enableBtn(){
+        document.getElementById("button1").disabled = false;
+      }
+    </script>
 </body>
 
 </html>
