--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="google-site-verification" content="dI4OtyNi2j42VzEDo9J9r-rPIEDf0_0OXNGTfh8w55g" />
-  <title>Eagle Creek Lodge - The Perfect Weekend Retreat  </title>
-  <meta name="description" content="Eagle Creek Lodge offers comfortable housing and the perfect setting for any event. Weekend getaways, weddings, reunions, and more! ">
+  <title>Eagle Creek Lodge - The Perfect Weekend Retreat </title>
+  <meta name="description"
+    content="Eagle Creek Lodge offers comfortable housing and the perfect setting for any event. Weekend getaways, weddings, reunions, and more! ">
   <link rel="icon" href="img/favicon.png" type="image/png">
 
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
@@ -20,6 +21,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 
 
   <style>
@@ -92,6 +94,10 @@
       width: auto;
       max-height: 77px;
       max-width: 255px;
+    }
+
+    .captchaWrap {
+      padding-top: 2em;
     }
   </style>
 </head>
@@ -336,7 +342,9 @@
           <div class="col-lg-8">
             <div class="single-recent-blog-post">
               <div class="thumb">
-                <iframe width="660" height="415" src="https://www.youtube.com/embed/him9Ee-fvGU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="660" height="415" src="https://www.youtube.com/embed/him9Ee-fvGU" frameborder="0"
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
 
               </div>
 
@@ -352,8 +360,9 @@
                   <h4 class="single-sidebar-widget__title">Newsletter</h4>
                   <div class="form-group mt-30">
                     <div class="col-autos">
-                      <input name="email" class="form-control" id="inlineFormInputGroup" placeholder="Enter Email" onfocus="this.placeholder = ''"
-                        onblur="this.placeholder = 'Enter Email '" required="" type="email">
+                      <input name="email" class="form-control" id="inlineFormInputGroup" placeholder="Enter Email"
+                        onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required=""
+                        type="email">
                     </div>
                   </div>
                   <button type="submit" value="Submit" class="click-btn bbtns d-block mt-20 w-100">Subcribe</button>
@@ -382,25 +391,31 @@
             </p>
           </div>
         </div>
-        <div class="col-lg-4  col-md-6 col-sm-6 center">
+        <div class="col-lg-4 col-md-6 col-sm-6 center">
           <div class="single-footer-widget">
             <h6 class="pad-right1">Newsletter</h6>
             <p class="pad-right1">Stay up to date with our latest news</p>
             <div class="" id="mc_embed_signup">
 
-              <form target="_blank" action="insert.php" method="post" class="form-inline">
+              <form target="_blank" action="captcha2.php" method="post" class="form-inline">
 
                 <div class="d-flex flex-row">
 
                   <input class="form-control" name="email" placeholder="Enter Email" onfocus="this.placeholder = ''"
                     onblur="this.placeholder = 'Enter Email '" required="" type="email">
-
-
-                  <button class="click-btn btn btn-default"><span class="lnr lnr-arrow-right"></span></button>
+                  <!-- <div class="captchaWrap">
+                    <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu"></div>
+                  </div> -->
+                  <button id="button1" type="submit" value="Submit" class="click-btn btn btn-default"><span
+                      class="lnr lnr-arrow-right"></span></button>
                   <!--<div style="position: absolute; left: -5000px;">
                     <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
                   </div>-->
 
+                </div>
+                <div class="captchaWrap">
+                  <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu"
+                    data-callback="enableBtn"></div>
                 </div>
                 <div class="info"></div>
               </form>
@@ -451,7 +466,17 @@
       $('#mModal').modal('show');
     });
   </script>
-
+  <script>
+    $(window).on('load', function () {
+      document.getElementById("button1").disabled = true;
+    });
+    </script>
+  
+    <script>
+      function enableBtn(){
+        document.getElementById("button1").disabled = false;
+      }
+    </script>
 </body>
 
 </html>
