--- a/weddings.html
+++ b/weddings.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Eagle Creek Lodge</title>
-	<link rel="icon" href="img/favicon.png" type="image/png">
+  <link rel="icon" href="img/favicon.png" type="image/png">
 
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css">
@@ -18,138 +19,171 @@
 
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 
+  <style>
+    html,
+    body {
+      overflow-x: hidden;
+    }
 
-<style>
-  html,body{overflow-x: hidden;}
-  html { overflow-y: scroll; }
+    html {
+      overflow-y: scroll;
+    }
 
-  .navCustom{
-    background-color: #b59a77;
+    .navCustom {
+      background-color: #b59a77;
 
-  }
-  .bodyCustom{
-    background-color: #dbc4a6;
-    /*padding-top: 2em;*/
-  }
-  .fontCustom{
-    font-family: "Zilla Slab",serif!important;
-  }
-  .quotes{
-    font-family: "Zilla Slab",serif!important;
-    text-align: center;
-    font-size: 28px;
-    color: #000000;
-    padding-top: 2em;
-    padding-bottom: 2em;
-  }
-  .left{
-    text-align: left;
-  }
-  .right{
-    text-align: right;
-  }
-  .center{
-    text-align: center;
-  }
-  .pad-right1{
-    padding-right: 4em;
-  }
-  .brown1{
-    color: #4c3216;
-  }
-  .jumbotron {
-  color: white;
-  background-image: url("img/wedding/5.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
-}
-  .quotesx{
-    font-family: "Zilla Slab",serif!important;
-    /*text-align: center;*/
-    font-size: 42px;
-    color: #FFFFFF;
-    /*padding-top: 2em;*/
-    padding-bottom: 0.5em;
-    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-  }
-  .quotesxy{
-    font-family: "Zilla Slab",serif!important;
-    /*text-align: center;*/
-    font-size: 40px;
-    color: #FFFFFF;
-    /*padding-top: 2em;
+    }
+
+    .bodyCustom {
+      background-color: #dbc4a6;
+      /*padding-top: 2em;*/
+    }
+
+    .fontCustom {
+      font-family: "Zilla Slab", serif !important;
+    }
+
+    .quotes {
+      font-family: "Zilla Slab", serif !important;
+      text-align: center;
+      font-size: 28px;
+      color: #000000;
+      padding-top: 2em;
+      padding-bottom: 2em;
+    }
+
+    .left {
+      text-align: left;
+    }
+
+    .right {
+      text-align: right;
+    }
+
+    .center {
+      text-align: center;
+    }
+
+    .pad-right1 {
+      padding-right: 4em;
+    }
+
+    .brown1 {
+      color: #4c3216;
+    }
+
+    .jumbotron {
+      color: white;
+      background-image: url("img/wedding/5.png");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 100vh;
+    }
+
+    .quotesx {
+      font-family: "Zilla Slab", serif !important;
+      /*text-align: center;*/
+      font-size: 42px;
+      color: #FFFFFF;
+      /*padding-top: 2em;*/
+      padding-bottom: 0.5em;
+      text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+    }
+
+    .quotesxy {
+      font-family: "Zilla Slab", serif !important;
+      /*text-align: center;*/
+      font-size: 40px;
+      color: #FFFFFF;
+      /*padding-top: 2em;
     padding-bottom: 2em;*/
-    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-  }
-  .hColor{
-    color: #000000;
-  }
-  .pColor{
-    color: #3A414E;
-  }
-  .titleA{
-    font-size: 32px;
-  }
-  .quotesMod{
-    font-family: "Zilla Slab",serif!important;
-    text-align: center;
-    font-size: 28px;
-    color: #000000;
-    padding-top: 2em;
-    /*padding-bottom: 2em;*/
-  }
-  .spacer{
-    padding-top: 3em;
-  }
-  .padded{
-    padding: 1em;
-  }
-  .spacing{
-/*    margin-right: 0.5em;
+      text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+    }
+
+    .hColor {
+      color: #000000;
+    }
+
+    .pColor {
+      color: #3A414E;
+    }
+
+    .titleA {
+      font-size: 32px;
+    }
+
+    .quotesMod {
+      font-family: "Zilla Slab", serif !important;
+      text-align: center;
+      font-size: 28px;
+      color: #000000;
+      padding-top: 2em;
+      /*padding-bottom: 2em;*/
+    }
+
+    .spacer {
+      padding-top: 3em;
+    }
+
+    .padded {
+      padding: 1em;
+    }
+
+    .spacing {
+      /*    margin-right: 0.5em;
     margin-left: 0.5em;*/
-    margin-top: 1em;
-    margin-bottom: 1em;
-  }
-  /*.thumbnail{
+      margin-top: 1em;
+      margin-bottom: 1em;
+    }
+
+    /*.thumbnail{
     display:block;
     max-width:100%;
     height:auto;
     margin-right:auto;
     margin-left:auto;
   }*/
-  .pic{
-    padding-bottom: 1em;
-  }
-  .pic img{
-    display: block;
-    max-width: 100%;
-    height: auto;
-    margin-right: auto;
-    margin-left: auto;
-
-  }
-  .container{
-    width: 100%;
-  }
-  @media (max-width: 991px) {
-    nav.navbar {
-      background: lightgray !important;
+    .pic {
+      padding-bottom: 1em;
     }
-  }
-  #header_placeholder {
-    height:70px;
-    width:100%;
-    display:none;
-}
+
+    .pic img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      margin-right: auto;
+      margin-left: auto;
+
+    }
+
+    .container {
+      width: 100%;
+    }
+
+    @media (max-width: 991px) {
+      nav.navbar {
+        background: lightgray !important;
+      }
+    }
+
+    #header_placeholder {
+      height: 70px;
+      width: 100%;
+      display: none;
+    }
 
     .img-responsivex {
       height: auto;
       width: auto;
       max-height: 77px;
       max-width: 255px;
+    }
+
+    .captchaWrap {
+      padding-top: 2em;
     }
   </style>
 </head>
@@ -214,167 +248,173 @@
       <div class="row">
         <div class="col-lg-12">
           <h1 class="hColor">Eagle Creek Lodge is the perfect place for the wedding you've always dreamed of!</h1>
-          <p class="pColor">Everyone dreams of a picture perfect wedding venue and Eagle Creek is about as perfect as it gets. Located just outside State College, PA, Eagle Creek sits on 8 acres of spacious and beautiful woods, fields, and streams, making it an extremely photogenic area. From the rustic lodging area to walking down the aisle with crisp leaves under your feet, Eagle Creek is a venue you’ll never forget. We guarantee gorgeous scenery, warm professionalism, and top notch customer service. Our outdoor dining area pairs perfectly with a cool crisp Autumn day or a warm comforting Summer breeze. Whatever your heart desires, Eagle Creek has it all. Book with us today! </p>
+          <p class="pColor">Everyone dreams of a picture perfect wedding venue and Eagle Creek is about as perfect as it
+            gets. Located just outside State College, PA, Eagle Creek sits on 8 acres of spacious and beautiful woods,
+            fields, and streams, making it an extremely photogenic area. From the rustic lodging area to walking down
+            the aisle with crisp leaves under your feet, Eagle Creek is a venue you’ll never forget. We guarantee
+            gorgeous scenery, warm professionalism, and top notch customer service. Our outdoor dining area pairs
+            perfectly with a cool crisp Autumn day or a warm comforting Summer breeze. Whatever your heart desires,
+            Eagle Creek has it all. Book with us today! </p>
         </div>
       </div>
     </div>
 
-<!--================================ Gallery ------------------------------------->
+    <!--================================ Gallery ------------------------------------->
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="quotes">
-        <p><span class="titleA"><b>A few of our favorite moments...</b></span></p>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="quotes">
+            <p><span class="titleA"><b>A few of our favorite moments...</b></span></p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-3">
-      <a href="img/wedding/1.png" data-title="wedding1" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/1.png" alt="wedding1">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3">
+          <a href="img/wedding/1.png" data-title="wedding1" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/1.png" alt="wedding1">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-3">
+          <a href="img/wedding/2.png" data-title="wedding2" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/2.png" alt="Cabin #1">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-3">
+          <a href="img/wedding/3.png" data-title="wedding3" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/3.png" alt="Cabin #3">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-3">
+          <a href="img/wedding/4.png" data-title="wedding4" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/4.png" alt="Cabin #4">
+            </div>
+          </a>
+        </div>
+
       </div>
-    </a>
+
+      <div class="row">
+        <div class="col-lg-3">
+          <a href="img/wedding/5.png" data-title="wedding5" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/5.png" alt="Cabin #5">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-3">
+          <a href="img/wedding/6.png" data-title="wedding6" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/6.png" alt="Cabin #6">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-3">
+          <a href="img/wedding/7.png" data-title="wedding7" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/7.png" alt="Cabin #7">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-3">
+          <a href="img/wedding/8.png" data-title="wedding8" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/8.png" alt="Cabin #8">
+            </div>
+          </a>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col-lg-3">
+          <a href="img/wedding/9.png" data-title="wedding9" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/9.png" alt="Cabin #9">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-3">
+          <a href="img/wedding/10.png" data-title="wedding10" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/10.png" alt="Cabin #10">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-3">
+          <a href="img/wedding/11.png" data-title="wedding11" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/11.png" alt="Cabin #11">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-3">
+          <a href="img/wedding/12.png" data-title="wedding12" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/12.png" alt="Cabin #12">
+            </div>
+          </a>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col-lg-3">
+          <a href="img/wedding/13.png" data-title="wedding13" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/13.png" alt="Cabin #13">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-3">
+          <a href="img/wedding/14.png" data-title="wedding14" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/14.png" alt="Cabin #14">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-3">
+          <a href="img/wedding/15.png" data-title="wedding15" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/15.png" alt="Cabin #15">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-3">
+          <a href="img/wedding/16.png" data-title="wedding16" data-lightbox="600x">
+            <div class="pic">
+              <img src="img/wedding/16.png" alt="Cabin #16">
+            </div>
+          </a>
+        </div>
+
+      </div>
+
     </div>
 
-    <div class="col-lg-3">
-      <a href="img/wedding/2.png" data-title="wedding2" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/2.png" alt="Cabin #1">
-      </div>
-    </a>
-    </div>
-
-    <div class="col-lg-3">
-      <a href="img/wedding/3.png" data-title="wedding3" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/3.png" alt="Cabin #3">
-      </div>
-    </a>
-    </div>
-
-    <div class="col-lg-3">
-      <a href="img/wedding/4.png" data-title="wedding4" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/4.png" alt="Cabin #4">
-      </div>
-    </a>
-    </div>
-
-  </div>
-
-  <div class="row">
-    <div class="col-lg-3">
-      <a href="img/wedding/5.png" data-title="wedding5" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/5.png" alt="Cabin #5">
-      </div>
-    </a>
-    </div>
-
-    <div class="col-lg-3">
-      <a href="img/wedding/6.png" data-title="wedding6" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/6.png" alt="Cabin #6">
-      </div>
-    </a>
-    </div>
-
-    <div class="col-lg-3">
-      <a href="img/wedding/7.png" data-title="wedding7" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/7.png" alt="Cabin #7">
-      </div>
-    </a>
-    </div>
-
-    <div class="col-lg-3">
-      <a href="img/wedding/8.png" data-title="wedding8" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/8.png" alt="Cabin #8">
-      </div>
-    </a>
-    </div>
-
-  </div>
-
-  <div class="row">
-    <div class="col-lg-3">
-      <a href="img/wedding/9.png" data-title="wedding9" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/9.png" alt="Cabin #9">
-      </div>
-    </a>
-    </div>
-
-    <div class="col-lg-3">
-      <a href="img/wedding/10.png" data-title="wedding10" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/10.png" alt="Cabin #10">
-      </div>
-    </a>
-    </div>
-
-    <div class="col-lg-3">
-      <a href="img/wedding/11.png" data-title="wedding11" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/11.png" alt="Cabin #11">
-      </div>
-    </a>
-    </div>
-
-    <div class="col-lg-3">
-      <a href="img/wedding/12.png" data-title="wedding12" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/12.png" alt="Cabin #12">
-      </div>
-    </a>
-    </div>
-
-  </div>
-
-  <div class="row">
-    <div class="col-lg-3">
-      <a href="img/wedding/13.png" data-title="wedding13" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/13.png" alt="Cabin #13">
-      </div>
-    </a>
-    </div>
-
-    <div class="col-lg-3">
-      <a href="img/wedding/14.png" data-title="wedding14" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/14.png" alt="Cabin #14">
-      </div>
-    </a>
-    </div>
-
-    <div class="col-lg-3">
-      <a href="img/wedding/15.png" data-title="wedding15" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/15.png" alt="Cabin #15">
-      </div>
-    </a>
-    </div>
-
-    <div class="col-lg-3">
-      <a href="img/wedding/16.png" data-title="wedding16" data-lightbox="600x">
-      <div class="pic">
-        <img src="img/wedding/16.png" alt="Cabin #16">
-      </div>
-    </a>
-    </div>
-
-  </div>
-
-</div>
-
-<!--================================ Gallery End --------------------------------->
+    <!--================================ Gallery End --------------------------------->
 
   </main>
 
@@ -390,25 +430,29 @@
             </p>
           </div>
         </div>
-        <div class="col-lg-4  col-md-6 col-sm-6 center">
+        <div class="col-lg-4 col-md-6 col-sm-6 center">
           <div class="single-footer-widget">
             <h6 class="pad-right1">Newsletter</h6>
             <p class="pad-right1">Stay up to date with our latest news</p>
             <div class="" id="mc_embed_signup">
 
-              <form target="_blank" action="insert.php" method="post" class="form-inline">
+              <form target="_blank" action="captcha2.php" method="post" class="form-inline">
 
                 <div class="d-flex flex-row">
 
                   <input class="form-control" name="email" placeholder="Enter Email" onfocus="this.placeholder = ''"
                     onblur="this.placeholder = 'Enter Email '" required="" type="email">
-
-
-                  <button class="click-btn btn btn-default"><span class="lnr lnr-arrow-right"></span></button>
+                  <!-- <div class="captchaWrap">
+                    <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu"></div>
+                  </div> -->
+                  <button id="button1" type="submit" value="Submit" class="click-btn btn btn-default"><span class="lnr lnr-arrow-right"></span></button>
                   <!--<div style="position: absolute; left: -5000px;">
                     <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
                   </div>-->
 
+                </div>
+                <div class="captchaWrap">
+                  <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu" data-callback="enableBtn"></div>
                 </div>
                 <div class="info"></div>
               </form>
@@ -447,12 +491,23 @@
   <script src="js/main.js"></script>
   <script src="js/lightbox2/dist/js/lightbox.min.js"></script>
   <script>
-  $(".jumbotron").css({ height: $(window).height() + "px" });
+    $(".jumbotron").css({ height: $(window).height() + "px" });
 
-$(window).on("resize", function() {
-  $(".jumbotron").css({ height: $(window).height() + "px" });
-});
-</script>
+    $(window).on("resize", function () {
+      $(".jumbotron").css({ height: $(window).height() + "px" });
+    });
+  </script>
+  <script>
+    $(window).on('load', function () {
+      document.getElementById("button1").disabled = true;
+    });
+  </script>
 
+  <script>
+    function enableBtn() {
+      document.getElementById("button1").disabled = false;
+    }
+  </script>
 </body>
+
 </html>
